# AutoMine

./: .gitignore  MsDeep.py  MsTester.py  readme.md
AI/: MsDeep.py  MsTester.py  app.py
AI/Networks/: README.md  layers.py  layers_mkl.py  network.py  optimizer.py  utils.py
AI/Teacher/: teacher.py
Client/: AIProcessProxy.cs  Board.cs  BoardEnum.cs  Game1.cs  Program.cs
Client/Content/: Content.mgcb
CppExtension/: CMakeLists.txt  mkl_mat.cpp  sycl_mat.cpp  test.py  test_mkl.py
GameEngine/: MsEngine.py
Learner/: MsDeep.py  README.md  layers.py  network.py
MultEngine_Test/: mkl_mat.cpp  test.py  test_custom.py  test_mkl.py
Networks/: README.md  layers.py  network.py  optimizer.py
Teacher/: MsTeacher.py  teacher.py
